[package]
name = "aocnds"
version = "25.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
spin = { version = "=0.9.8", features = ["portable_atomic"]}
talc = { version = "=4.4.2" }
portable-atomic = { version = "=1.10.0", default-features = false, features = ["critical-section"]}
critical-section = { version = "=1.2.0", features = ["restore-state-u32"] }
voladdress = { version = "=1.4.0" }
embedded-graphics-core = "0.4.0"
embedded-graphics = "=0.8.1"
tinybmp = "=0.6.0"

[profile.dev]
opt-level = 0

[[bin]]
name = "aocnds"
path = "src/main.rs"
test = false
doctest = false
bench = false
